--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.94.0",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
